[package]
name = "disint-model"
description = "Serializable data models for Discord Interaction."
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
homepage = "https://github.com/tirr-c/disint"
repository = "https://github.com/tirr-c/disint"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
derive_builder = "0.9.0"

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.serde]
version = "1.0.122"
features = ["derive"]

[features]
default = []
incomplete = []
