[package]
name = "disint-tide"
description = "Tide middleware for Discord Interaction endpoints."
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
homepage = "https://github.com/tirr-c/disint"
repository = "https://github.com/tirr-c/disint"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
async-trait = "0.1.42"
tide = "0.15.0"

[dependencies.disint-security]
path = "../disint-security"
version = "0.1.0"
